--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,38 @@
-WTForms~=3.0.1
-Flask~=2.0.3
-Werkzeug~=2.0.3
+alembic==1.7.6
+blinker==1.4
+certifi==2021.10.8
+charset-normalizer==2.0.9
+click==8.0.3
+conda==4.3.16
+distlib==0.3.4
+dnspython==2.2.0
+dominate==2.6.0
+email-validator==1.1.3
+filelock==3.4.2
+Flask==2.0.3
+Flask-Bootstrap==3.3.7.1
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
+Flask-Migrate==3.1.0
+Flask-Moment==1.0.2
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.0
+greenlet==1.1.2
+idna==3.3
+itsdangerous==2.1.0
+Jinja2==3.0.3
+Mako==1.1.6
+MarkupSafe==2.1.0
+pipenv==2021.11.23
+platformdirs==2.4.1
+pycosat==0.6.3
+requests==2.26.0
+ruamel.yaml==0.17.19
+ruamel.yaml.clib==0.2.6
+SQLAlchemy==1.4.31
+urllib3==1.26.7
+virtualenv==20.11.0
+virtualenv-clone==0.5.7
+visitor==0.1.3
+Werkzeug==2.0.3
+WTForms==3.0.1
